--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <div id="discord-box">
         <div class="img-container">
             <img src="https://assets-global.website-files.com/6257adef93867e50d84d30e2/636e0a6a49cf127bf92de1e2_icon_clyde_blurple_RGB.png" alt="discord">
-            
+        </div>
+        <p>zdevyn</p>
+    </div>
+    <div id="insta-box">
+        <div class="img-container">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/2048px-Instagram_logo_2016.svg.png" alt="instagram">
         </div>
         <p>zdevyn</p>
     </div>
