--- a/index.html
+++ b/index.html
@@ -7,17 +7,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="discord-box">
+    <div style="border-color: #ffffff;" class="link-container"> // github
+        <div class="img-container">
+            <img src="https://bitperfect.at/assets/blog-images/Headerbild-Was-ist-GitHub-v2.png" alt="instagram">
+        </div>
+        <a href="https://github.com/zdevyn/" style="color: #ffffff;">zdevyn</a>
+    </div>
+    <div style="border-color: #5865f2;" class="link-container"> // discord
         <div class="img-container">
             <img src="https://assets-global.website-files.com/6257adef93867e50d84d30e2/636e0a6a49cf127bf92de1e2_icon_clyde_blurple_RGB.png" alt="discord">
         </div>
-        <p>zdevyn</p>
+        <a href="https://discordapp.com/users/1080500769817632863" style="color: #5865f2;">zdevyn</a>
     </div>
-    <div id="insta-box">
+    <div style="border-color: #fc9201;" class="link-container"> // instagram
         <div class="img-container">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/2048px-Instagram_logo_2016.svg.png" alt="instagram">
         </div>
-        <p>zdevyn</p>
+        <a href="https://www.instagram.com/zxdevyn/" style="color: #fc9201;">zxdevyn</a>
     </div>
 </body>
 </html>
